--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ AI_core_vs2017solution/core.VC.VC.opendb
 AI_core_vs2017solution/System.Servicemodel.Faltexception.dll
 [Ll]ibrary_/
 AI_core_vs2017solution/.vs
+commamd.shell
